fix: overflow page section

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,4 +1,4 @@
-@media (max-width: 541px) {
+@media (max-width: 646px) {
   .content {
     padding: 0 19px;
     box-sizing: border-box;
