--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -2,7 +2,7 @@
   flex-grow: 1;
   display: grid;
   grid-template-rows: auto auto;
-  grid-template-columns: minmax(min-content, auto) 24px;
+  grid-template-columns: minmax(min-content, max-content) 24px;
   grid-template-areas:
     'title button-edit'
     'desc  .';
